@@ -1,5 +1,7 @@
 17 July 2018: Wouter
 	- Fix #4127 unbound -h does not list -p help.
+	- Print error if SSL name verification configured but not available
+	  in the ssl library.
 
 16 July 2018: Wouter
 	- Fix qname minimisation NXDOMAIN validation lookup failures causing
